@@ -1,6 +1,6 @@
 /*  IIPImage Server: OpenJPEG JPEG2000 handler
 
-    Copyright (C) 2019-2022 Ruven Pillay.
+    Copyright (C) 2019-2023 Ruven Pillay.
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -207,7 +207,7 @@ void OpenJPEGImage::loadImageInfo( int seq, int ang )
   unsigned int n = 1;
   w = image_widths[0];
   h = image_heights[0];
-  while( (w>tile_width) || (h>tile_height) ){
+  while( (w>tile_widths[0]) || (h>tile_heights[0]) ){
     n++;
     w = floor( w/2.0 );
     h = floor( h/2.0 );
@@ -307,18 +307,18 @@ RawTile OpenJPEGImage::getTile( int seq, int ang, unsigned int res, int layers, 
     throw file_error( tile_no.str() );
   }
 
-  int vipsres = (numResolutions - 1) - res;
+  int vipsres = getNativeResolution( res );
 
-  unsigned int tw = tile_width;
-  unsigned int th = tile_height;
+  unsigned int tw = tile_widths[0];
+  unsigned int th = tile_heights[0];
   
   // Get the width and height for last row and column tiles
-  unsigned int rem_x = image_widths[vipsres] % tile_width;
-  unsigned int rem_y = image_heights[vipsres] % tile_height;
+  unsigned int rem_x = image_widths[vipsres] % tile_widths[0];
+  unsigned int rem_y = image_heights[vipsres] % tile_heights[0];
 
   // Calculate the number of tiles in each direction
-  unsigned int ntlx = (image_widths[vipsres] / tile_width) + (rem_x == 0 ? 0 : 1);
-  unsigned int ntly = (image_heights[vipsres] / tile_height) + (rem_y == 0 ? 0 : 1);
+  unsigned int ntlx = (image_widths[vipsres] / tile_widths[0]) + (rem_x == 0 ? 0 : 1);
+  unsigned int ntly = (image_heights[vipsres] / tile_heights[0]) + (rem_y == 0 ? 0 : 1);
 
   // Check whether requested tile exists
   if( tile >= ntlx*ntly ){
@@ -338,8 +338,8 @@ RawTile OpenJPEGImage::getTile( int seq, int ang, unsigned int res, int layers, 
   }
 
   // Calculate the pixel offsets for this tile
-  int xoffset = (tile % ntlx) * tile_width;
-  int yoffset = (unsigned int) floor((double)(tile/ntlx)) * tile_height;
+  int xoffset = (tile % ntlx) * tile_widths[0];
+  int yoffset = (unsigned int) floor((double)(tile/ntlx)) * tile_heights[0];
   
 #ifdef DEBUG
   logfile << "OpenJPEG :: Tile size: " << tw << "x" << th << " @" << channels << endl;
